--- a/2019 - CollabSummit - Europe/AzureDevOPSPipeline.yaml
+++ b/2019 - CollabSummit - Europe/AzureDevOPSPipeline.yaml
@@ -21,7 +21,7 @@ steps:
     ArtifactName: Demo
 - task: AzurePowerShell@4
   inputs:
-    azureSubscription: 'Consommation interne Microsoft Azure (aeaea727-e899-4c3b-9cdf-9dcfc75f4f2e)'
+    azureSubscription: 'Visual Studio Enterprise (3de0cad0-1774-42c2-8d7d-b7d6c4ec8afc)'
     ScriptType: 'InlineScript'
     Inline: |
            Write-Host "Setting Security Protocol"
