Set up CI with Azure Pipelines
[skip ci]

--- a/2019 - CollabSummit - Europe/AzureDevOPSPipeline.yaml
+++ b/2019 - CollabSummit - Europe/AzureDevOPSPipeline.yaml
@@ -21,7 +21,7 @@ steps:
     ArtifactName: Demo
 - task: AzurePowerShell@4
   inputs:
-    azureSubscription: 'Visual Studio Enterprise (3de0cad0-1774-42c2-8d7d-b7d6c4ec8afc)'
+    azureSubscription: 'My Dev/Test (37677f49-29f5-4798-9fe1-f802a61a6452)'
     ScriptType: 'InlineScript'
     Inline: |
            Write-Host "Setting Security Protocol"
